<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_virtual_joystick_driver</name>
  <version>1.0.0</version>
  <description>Package for the NoRMA virtual joystick driver</description>

  <maintainer email="lewisbrand.56@gmail.com">Lewis Christopher Brand</maintainer>
  <license>ECL-2.0</license>
  <url type="website">http://www.nottingham.ac.uk</url>
  <author  email="lewisbrand.56@gmail.com">Lewis Christopher Brand</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
